Added Node class that handles all the data needed for each cell that will be used for the A* algorithm

--- a/astar-cpp.vcxproj
+++ b/astar-cpp.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="Point.cpp" />
   </ItemGroup>
   <ItemGroup>
